2006-02-23 [wwp]	2.0.0cvs76

	* commitHelper
		fixed indentation from my previous commit. Fallback to VISUAL if
		EDITOR is not set (and to vi, at last resort).

2006-02-23 [wwp]	2.0.0cvs75

	* commitHelper
		improved error detection (Colin, me).

2006-02-23 [wwp]	2.0.0cvs74

	* src/prefs_toolbar.c
		simplify and fix prefs/toolbars layouting. Combos' contents can
		now be really displayed.

2006-02-23 [wwp]	2.0.0cvs73
	simplifies and fix prefs/toolbars layouting. Combos' contents can now
	be really displayed.

2006-02-22 [wwp]	2.0.0cvs72

	* src/compose.c
		fix a typo in my previous commit (sorry!).

2006-02-22 [wwp]	2.0.0cvs71

	* src/prefs_toolbar.c
		fix a crash when adding separators to toolbars,
		also fix some separator item information.

2006-02-22 [wwp]	2.0.0cvs70

	* src/compose.c
		fix a crash when redirecting (for instance) when compose window's
		toolbar contents has been customized (when some buttons have been
		removed in fact).

2006-02-21 [wwp]	2.0.0cvs69

	* src/summaryview.c
	* src/gtk/pluginwindow.c
	* src/plugins/pgpcore/prefs_gpg.c
		fix some compilation warnings (feat. remains of removed code).

2006-02-21 [wwp]	2.0.0cvs68

	* src/gtk/gtkutils.c
		fix two compilation issues, thanks to Stephan Sachse.

2006-02-20 [colin]	2.0.0cvs67

	* src/mainwindow.c
		Don't reselect displayed mail on refocus
		This fixes actions misbehaving 

2006-02-20 [wwp]	2.0.0cvs66

	* src/summaryview.c
	* src/gtk/gtksctree.c
	* src/gtk/gtkshruler.c
		changed more runtime typecast checks.

2006-02-20 [wwp]	2.0.0cvs65

	* src/summary_search.c
		find all - summaryview refresh issue fixed, thanks to Colin.

2006-02-20 [wwp]	2.0.0cvs64

	* src/gtk/gtkutils.c
		better runtime typecast checks.

2006-02-20 [wwp]	2.0.0cvs63

	* src/summary_search.c
		enhancements to the summary search:
			- add the ability to stop the running search
			  (upon ESC-key press, new Stop button or when Clear button is pressed)
			- don't search if no criteria (From/To/Subject/Body) is set